--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -367,11 +367,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<img src=\"https://github.com/aspuru-guzik-group/JANUS/blob/main/aux/logo.png?raw=True\" width=\"950\" />"
+   ]
   },
   {
    "cell_type": "code",
